Add implementation to method getNeighbourPoints